fix BeanObject doesn't make defensive copies